--- a/src/styles/docs.scss
+++ b/src/styles/docs.scss
@@ -28,19 +28,19 @@
 	overflow: hidden;
 	box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
 
-	&__head {
-		width: 100%;
+	& > thead {
 		& > tr {
-			border-bottom: 1px solid rgba(171, 183, 183, 1.0);
-
+			border-bottom: 1px solid rgba(189, 195, 199, 1);
 			& > th {
+				vertical-align: bottom;
 				text-align: left;
 				padding: 10px;
+				color: #818a96;
+
 				& > span {
 					display: flex;
-					justify-content: flex-start;
 					align-items: center;
-					color: #818a96;
+					justify-content: flex-start;
 					& > svg {
 						margin-left: 0.25rem;
 					}
@@ -48,47 +48,91 @@
 			}
 		}
 	}
-	&__body {
-		& > tr {
-			border-bottom: 1px solid rgba(171, 183, 183, 1.0);
-			height: 104px;
-			position: relative;
-			& > td:nth-child(1),
-			td:nth-child(2),
-			td:nth-child(3),
-			td:nth-child(4) {
-				padding: 10px;
-			}
-			& > td:nth-child(4) {
-				height: 110px;
-				width: 900px;
-			}
-		}
-		&--text_container {
-			display: flex;
-			flex-direction: column;
-			& > h4 {
-				margin-bottom: 1rem;
-			}
 
-			&--expand {
-				position: relative;
-				width: 60px;
-				& > span {
-					position: absolute;
-					height: 30px;
+	& > tbody {
+		& > tr {
+			border-bottom: 1px solid rgba(189, 195, 199, 1);
+
+			& > td {
+				padding: 10px;
+				vertical-align: top;
+
+				& > button {
 					width: 100%;
-					display: flex;
-					justify-content: center;
-					align-items: center;
+					height: 30px;
+					outline: none;
+					border: none;
 					cursor: pointer;
-					transition: 300ms all ease-in-out;
+					font-size: 20px;
+					border-radius: 5px;
+					transition: all 300ms ease-in-out;
 					&:hover {
-						background-color: #e2e2e2;
+						background-color: gray;
+						color: #fff;
 					}
 				}
 			}
+
+			& > td:nth-child(5) {
+				text-align: center;
+				vertical-align: top;
+				width: 60px;
+			}
 		}
+	}
+
+	&__initial__textbox {
+		height: 130px;
+		overflow: hidden;
+		& > h3 {
+			margin-bottom: 2rem;
+		}
+
+		& > p {
+			overflow: hidden;
+			text-overflow: ellipsis;
+			white-space: nowrap;
+			height: 120px;
+			width: 700px;
+		}
+
+		&__empty {
+			display: none;
+		}
+	}
+
+	&__hidden {
+		display: none;
+		transition: 300ms all ease-in-out;
+		&--container {
+			& > div {
+				width: 100%;
+				border-bottom: 1px solid rgba(189, 195, 199, 1);
+				margin-bottom: 1rem;
+
+				& > p {
+					padding-bottom: 0.25rem;
+
+					font-size: 16px;
+					font-weight: 700;
+					color: #0c1625;
+				}
+			}
+		}
+	}
+
+	&__expanded {
+		display: table-row;
+		height: 100%;
+
+		transition: 300ms all ease-in-out;
+		& > td {
+			padding: 0;
+		}
+	}
+
+	&__initial {
+		min-height: 75px;
 	}
 }
 
@@ -97,15 +141,24 @@
 	color: #4b535e;
 }
 
-.shownText {
-	display: block;
+// On Toggle changes
+
+.patient__docs__table__initial__toggled {
+	background-color: #f3f5f9;
+	border: none;
 }
 
-.hidden {
-	height: 110px;
-	overflow: hidden;
-}
-.expanded {
-	height: 100%;
-	transition: 300ms ease-in-out;
+// Toggled
+
+.explored__container {
+	& > td {
+		display: table-cell;
+		padding: 5px;
+	}
+
+	& > table {
+		width: 100%;
+		max-width: 100%;
+		margin-bottom: 20px;
+	}
 }
